--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.8",
     "@react-navigation/stack": "^5.1.0",
+    "firebase": "^7.10.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
