--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "clean": "cd android && gradlew clean && cd .. && react-native run-android",
+    "build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/ && cd android && gradlew assembleRelease && cd ..",
     "test": "jest",
     "lint": "eslint ."
   },
