--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tradle/react-native-http": "^2.0.1",
     "assert": "^1.5.0",
     "asyncstorage-down": "^4.2.0",
+    "axios": "^0.19.2",
     "browserify-zlib": "^0.1.4",
     "buffer": "^4.9.2",
     "console-browserify": "^1.1.0",
