toast integrated for publishing data

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "clean": "cd android && gradlew clean && cd .. && react-native run-android",
+    "clean": "cd android && gradlew clean && cd ..",
+    "clean-and-run": "cd android && gradlew clean && cd .. && react-native run-android",
     "nodeify": "rn-nodeify --install --hack ",
     "build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/ && cd android && gradlew assembleRelease && cd ..",
     "test": "jest",
@@ -49,6 +50,7 @@
     "react-native": "0.61.5",
     "react-native-countup": "0.0.2",
     "react-native-crypto": "^2.2.0",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-google-fit": "^0.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
