--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,6 +78,7 @@ import com.android.build.OutputFile
 project.ext.react = [
     entryFile: "index.js",
     enableHermes: false,  // clean and rebuild if changing
+    nodeExecutableAndArgs: ["node", "--max-old-space-size=6144"]
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
