--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-loader": "^1.2.1",
+    "react-native-modal": "^11.5.6",
     "react-native-os": "^1.0.1",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.7.0",
