--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-loader": "^1.2.1",
     "react-native-modal": "^11.5.6",
     "react-native-os": "^1.0.1",
+    "react-native-progress": "^4.0.2",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
@@ -78,6 +79,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
