native-base library removed from project

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "levelup": "^4.3.2",
     "main": "^1000.0.1",
     "moment": "^2.24.0",
-    "native-base": "^2.13.12",
     "path-browserify": "0.0.0",
     "process": "^0.11.10",
     "punycode": "^1.2.4",
@@ -66,6 +65,7 @@
     "react-native-svg": "^11.0.1",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
+    "react-native-vector-icons": "^6.6.0",
     "readable-stream": "^1.1.14",
     "rn-nodeify": "^10.2.0",
     "stream-browserify": "^1.0.0",
