react native push notification library succefully installed and configured

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation project(':react-native-google-fit')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
