--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-modal": "^11.5.6",
     "react-native-os": "^1.0.1",
     "react-native-progress": "^4.0.2",
+    "react-native-push-notification": "^3.1.9",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
