--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iota/converter": "^1.0.0-beta.23",
     "@iota/mam": "^0.7.3",
     "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/netinfo": "^5.8.0",
     "@react-navigation/drawer": "^5.3.2",
     "@react-navigation/native": "^5.1.1",
     "@react-navigation/stack": "^5.2.3",
